changes made according to sonalint